# paper-cypher

./: alembic.ini  pyproject.toml
app/: main.py
app/api/dependencies/: database.py  llm.py
app/api/errors/: http_error.py  validation_error.py
app/api/routes/: api.py  chats.py  papers.py
app/core/: config.py  events.py  logging.py
app/core/settings/: app.py  base.py  development.py
app/db/: database.py  events.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0a3a793cdc96_initial_users_tables.py  0b65f52c1eb7_update_embedding_dims.py  31da09cf9a10_added_user_table.py  45a2fb5f3137_initial_tables.py  4fba5d79f993_update_embedding_dims.py  5b57f2ec9428_update_embedding_dims.py  bfbbcad69b0f_initial_tables.py  c77df273fb7a_initial_tables.py  f2de0a4e124e_create_all_tables.py
app/db/repositories/: base.py  embeddings.py  papers.py
app/helpers/: helpers.py
app/llm/: base.py  chunker.py  embeddings.py  estimator.py
app/models/: common.py
app/models/domains/: chat_messages.py  chats.py  embeddings.py  papers.py  users.py
app/models/schemas/: chats.py  common.py  embeddings.py  papers.py  users.py
app/resources/: strings.py
app/services/: papers.py  pdf_extractor.py
