[tool.poetry]
name = "papercypher"
version = "0.1.0"
description = ""
authors = ["Ashish <ashish.work310@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.26.0"
fastapi = "^0.109.0"
sqlalchemy = "^2.0.25"
loguru = "^0.7.2"
alembic = "^1.13.1"
pgvector = "^0.2.4"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"
python-multipart = "^0.0.6"
langchain = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
